Interface & Event dispatcher

--- a/FIrstStep.uproject
+++ b/FIrstStep.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.2",
+	"EngineAssociation": "{A06683C8-443F-67E6-C67F-3B8452B8DBA3}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
